@@ -1,1 +1,24 @@
 
+# JavaFXLoginForm
+
+---
+
+## Sample screenshots from the Login Form
+
+<img src="screnshots/Login.png" alt="Logn - Screen" width="400"/><br>
+
+<img src="screnshots/Registration.png" alt="Registration - Screen" width="400"/><br>
+
+<img src="screnshots/Successfull-login.png" alt="System Page - Screen" width="400"/><br>
+
+## Requirements
+
+- JDK - 17.0.2
+- JavaFX SDK - 17.0.2
+- mysql-connector-java-8.0.29
+
+## vmArgs Setup
+
+```
+--module-path /path/to/javafx-sdk-17.0.2/lib --add-modules javafx.controls,javafx.media
+```
